# DicomViewer

./: .gitignore  CMakeLists.txt  Main.qml  README.md  dicomimageprovider.h  main.cpp
backend/: dicomcontroller.cpp  dicomcontroller.h  dicomimageprovider.cpp  dicomimageprovider.h  dicomloader.cpp  dicomloader.h
